# ic-automaton

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  canbench.yml  canbench_results.yml  ic-automaton.did  icp.yaml  justfile  tasks.md
.githooks/: pre-commit  pre-push
.github/workflows/: canbench-regression.yml
ci/: check_canbench_regression.py
docs/: debugging-live-canister.md
docs/design/: AGENT_CONTEXT_EVOLUTION_INBOX_AND_AUTONOMY_TICKS.md  ICP_ANALYSIS.md  (+17 more)
evm/: foundry.toml
scripts/: generate-candid.sh
specs/: 2026-02-18-ic-automaton-v1-state-machine-skeleton.md  2026-02-18-inference-provider-ic-llm-then-openrouter.md  2026-02-19-certified-on-canister-observability-ui.md  2026-02-19-http-inference-provider-switch-ui.md  2026-02-19-serial-control-plane-durable-job-queue.md  2026-02-19-single-canister-inbox-custody-nonreplicated-roadmap.md  2026-02-19-temporary-open-canister-inbox-agent-loop.md  2026-02-20-openrouter-latency-controls-and-inference-backoff-hardening.md  2026-02-20-tool-call-continuation-agent-turn-and-scheduler-impact.md  2026-02-21-autonomous-wallet-balance-awareness-cycles-eth-usdc.md  2026-02-21-recovery-policy-consolidation-outcall-error-taxonomy.md  2026-02-21-terminal-ui-design.md  2026-02-22-inner-monologue-natural-flow-implementation-plan.md
src/: agent.rs  domain.rs  http.rs  lib.rs  prompt.rs  sanitize.rs  scheduler.rs  storage.rs  test_support.rs  timing.rs  tools.rs  ui_app.js  ui_index.html  ui_styles.css
tests/: pocketic_agent_autonomy.rs  pocketic_evm_polling.rs  pocketic_scheduler_queue.rs  pocketic_strategy_controls.rs  pocketic_ui_observability.rs  pocketic_wallet_balance_sync.rs  prompt_injection_corpus.json
(+42 files in other folders)
