[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
candid = "0.10"
canlog = { version = "0.2", features = ["derive"] }
ic-http-certification = "3.1.0"
ic-cdk = "0.19"
ic-cdk-timers = "1.0"
ic-stable-structures = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
pocketic_tests = []

[dev-dependencies]
pocket-ic = { version = "9.0.2" }
