[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-primitives = { version = "0.8", default-features = false, features = ["rlp"] }
alloy-rlp = { version = "0.3", default-features = false }
async-trait = "0.1"
candid = "0.10"
candid_parser = "0.3"
canlog = { version = "0.2", features = ["derive"] }
canbench-rs = { version = "0.4.0", optional = true }
futures = "0.3"
ic-http-certification = "3.1.0"
ic-cdk = "0.19"
ic-cdk-timers = "1.0"
ic-stable-structures = "0.7"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
json5 = "0.4"
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[features]
default = []
pocketic_tests = []
anvil_e2e = []
canbench-rs = ["dep:canbench-rs"]

[dev-dependencies]
pocket-ic = { version = "9.0.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2.12.1"
